# SFML_Learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
application/: CMakeLists.txt
application/inc/: Aircraft.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Entity.hpp  Game.hpp  PlayerInput.hpp  ResourceEnums.hpp  ResourceHolder.hpp  ResourceHolder.inl  SceneNode.hpp  SpriteNode.hpp  World.hpp
application/src/: Aircraft.cpp  Command.cpp  CommandQueue.cpp  Entity.cpp  Game.cpp  PlayerInput.cpp  SceneNode.cpp  SpriteNode.cpp  World.cpp  main.cpp
docs/: Game_Design_Techniques.md
docs/Diagrams/: Class_Diagram.dio  CommandStructure.dio  SceneGraph.dio
libs/utility/: CMakeLists.txt
libs/utility/inc/: Logger.hpp
libs/utility/src/: Logger.cpp
src/: Aircraft.cpp  Aircraft.hpp  Category.hpp  Command.cpp  Command.hpp  CommandQueue.cpp  CommandQueue.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PlayerInput.cpp  PlayerInput.hpp  ResourceEnums.hpp  ResourceHolder.hpp  ResourceHolder.inl  SceneNode.cpp  SceneNode.hpp  SpriteNode.cpp  SpriteNode.hpp  World.cpp  World.hpp  main.cpp
